# python-rtf

./: .pre-commit-config.yaml  README.md  pyproject.toml  rtf.py
.github/workflows/: ci.yml
src/rtf/: __init__.py
tests/: test_rtf.py
